# goldman_stacked

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  docker-compose.yaml  foundry.toml  pyproject.toml  vote_cli.py
controller_api/: abi.json  agents.yaml  govHelper.py  main.py  proposals.yaml
frontend/: Makefile  package-lock.json  package.json  shell.nix  vite.config.ts
frontend/src/: app.css
frontend/src-tauri/: tauri.conf.json
mints/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  mapping.txt
ponder/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  ponder.config.ts  ponder.schema.ts
ponder/abis/: MyGovernor.ts
ponder/goldman-stacked/: ponder.config.ts  ponder.schema.ts
ponder/src/: MyGovernor.ts
smart_contracts/: README.md
smart_contracts/abis/: GovernorRelayLZ.json  MyGovernor.json  Timelock.json  VotingMachineLzRead.json  VotingToken.json
smart_contracts/scripts/: CallProposeBase.s.sol  LzReadVoteArbitrum.s.sol  LzReadVotePolygon.s.sol  LzReruceFinalizeVotesBase.s.sol  SetReceiveConfigArbitrumLz.s.sol  SetReceiveConfigBaseLz.s.sol  SetReceiveConfigHederaBase.s.sol  SetReceiveConfigPolygonLz.s.sol  SetSendConfigBaseHedera.s.sol  SetSendConfigHederaBase.s.sol  configs.sh
smart_contracts/src/: GovernanceExecutor.sol  GovernorRelayLZ.sol  MyGovernor.sol  MyVotesToken.sol  Timelock.sol  VotingMachineLzRead.sol  VotingMachineLzReadHedera.sol  VotingToken.sol
smart_contracts/test/: GovernanceExecutor.t.sol  GovernorRelayLZ.t.sol  MyGovernor.t.sol  VotingMachineLzRead.t.sol
specs/: controller_spec.yaml
(+40 files in other folders)
